# CW_3

./: .coveragerc  .gitignore  README.md  main.py  pyproject.toml  utils.py
app/models/: data.py  operation.py
src/: main.py  settings.py
src/app/: data.py  operation.py
src/app/models/: operation.py
src/tests/: test_data.py  test_oper.py  test_operation.py
